fixed style guide motivatask no  stretch

--- a/styles/motivatask.css
+++ b/styles/motivatask.css
@@ -410,14 +410,21 @@ header {
   flex-wrap: wrap;
   margin-top: -3%;
   margin-bottom: 5%;
-  /* align-items: center; */
+  align-items: center;
 }
 
 .style-img {
   width: 45%;
   margin-right: 5%;
   margin-top: 7%;
-  align-items: center;
+}
+
+.style-img-2 {
+  margin-top: 1.5%;
+}
+
+.style-img-4 {
+  margin-top: -3%;
 }
 
 .logo-container {
@@ -869,6 +876,11 @@ button:hover {
   .phone-screens-container img,
   .finalscreen-container img {
     width: 80%;
+  }
+
+  .style-img-2,
+  .style-img-4 {
+    margin-top: 7%;
   }
 
   .phone-screens-container,
